$Id$

2018-11-02  Christian Franke  <franke@computer.org>

	ataprint.cpp, ataprint.h: Remove request to send '-l defects' output.
	Remove 'pending_defects_info' flag.
	smartctl.cpp, smartctl.8.in: Add '-l defects' to '-x' output.

2018-10-25  Christian Franke  <franke@computer.org>

	json.cpp, json.h: Add 'pretty' print option.
	smartctl.cpp, smartctl.8.in: Add '--json=c' option to disable
	pretty-printing.

	ataprint.cpp, nvmeprint.cpp, smartctl.cpp: Use const references
	for json::ref function parameters.

	json.cpp, json.h: Clean up usage of 'int64_t' and 'long long'.
	Use PRI?64 instead of "ll?" in printf() format strings.
	This re-enables build on older versions of MinGW.

2018-10-23  Christian Franke  <franke@computer.org>

	json.cpp: Remove extra space after JSON key names.

	json.cpp, json.h: Remove return of self reference from operator=().

	json.cpp, json.h: Change handling of unsafe and 128-bit integers:
	Output as string 'KEY_s' and LE byte array 'KEY_le' if range exceeded
	or verbose mode enabled.
	smartctl.cpp, smartctl.8.in: Add '--json=v' option.

2018-10-17  Christian Franke  <franke@computer.org>

	os_win32/popen_win32.cpp, os_win32/popen.h: New popen()/pclose()
	for Windows.  Unlike MSVCRT _popen(), it does not open a new console.
	os_win32.cpp: Remove run_cmd(), use popen() instead.
	os_win32/daemon_win32.cpp, os_win32/daemon_win32.h: Remove
	daemon_spawn().
	smartd.cpp: Remove _WIN32 specific usage of daemon_spawn(),
	use generic code with popen() also on Windows.
	Place quotes around warning script path on Windows.
	Makefile.am, os_win32/vc14/smart*.vcxproj*: Add new files.

2018-10-17  Rick Chen  <juihsiang.chen@gmail.com>

	scsiprint.cpp: Add SCSI information to JSON output as below:
	- Drive trip temperature (#1079)
	- Error counter log read/write/verify (#1079)
	- Grown defect list (#1082)
	- Percentage used endurance indicator (#1083)

2018-10-14  Christian Franke  <franke@computer.org>

	drivedb.h: